--- a/home.css
+++ b/home.css
@@ -93,11 +93,11 @@
     z-index: -1;
 }
 
-.middle-page {
-    /* display: flex;
+/* .middle-page {
+     display: flex;
     justify-content: center;
-    align-items: center; */
-}
+    align-items: center; 
+} */
 
 /* vadapav background sticky image */
 .vadapav-background-img {
@@ -231,6 +231,37 @@
     color: rgb(216, 216, 35);
 }
 
+/* you tube video section */
+.youtube {
+    width: 100%;
+    height: 800px;
+    margin: 0 0 200px 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.7);
+    padding: 20px;
+    opacity: 0;
+    animation: fadeIn 1.5s ease-in-out 0.5s forwards;
+}
+
+ .yt-video{
+    width: 45%;
+    height: 400px;
+    background: rgb(122, 109, 109, 0.3);
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
+    /* text-align: center; */
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+/* Hover effect */
+.yt-video:hover {
+    transform: translateY(-8px);
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
+}
+
 /* vision and mission */
 .vision-mission {
     width: 100%;
@@ -268,7 +299,7 @@
     line-height: 2.1;
 }
 
-/* Hover effect for better interaction */
+/* Hover effect */
 .box:hover {
     transform: translateY(-8px);
     box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
