--- a/home.css
+++ b/home.css
@@ -20,6 +20,9 @@
     position: relative;
     width: 100%;
     height: 100vh;
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
 }
 
 /* navigation bar */
@@ -87,10 +90,160 @@
 .vadapav-changing-img {
     width: 100%;
     height: 100vh;
+    filter: blur(0.2rem);
     object-fit: cover;
     position: absolute;
     top: 0;
     z-index: -1;
+}
+
+.slider {
+    height: 55%;
+    background-color: #ffffff67;
+    margin-top: 10rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.slider .slides {
+    height: 100%;
+    width: 60%;
+    /* background-color: #000000; */
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.slides .image{
+    display: none;
+}
+
+.slides .button {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    z-index: 5;
+}
+
+.slides .button a{
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    vertical-align: middle;
+    align-items: center;
+    cursor: pointer;
+    color: white;
+    background: rgba(0, 0, 0, 0.8);
+}
+
+.slides .button .prev {
+    border-radius: 0 0.3rem 0.3rem 0;
+}
+
+.slides .button .next {
+    border-radius: 0.3rem 0 0 0.3rem;
+}
+
+.dots {
+    text-align: center;
+    position: absolute;
+    bottom: 3rem;
+    left: 47%;
+    /* background: rgba(0, 0, 0, 0.8); */
+    padding: 0.3rem 0.6rem;
+    height: 2rem;
+}
+
+.dot {
+    cursor: pointer;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    background: #ffffff;
+    display: inline-block;
+    margin: 0.2rem;
+}
+
+.active,.dot:hover {
+    background-color: #f1860c;
+}
+
+.slides .image {
+    height: 65%;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background-color: #000000; */
+    gap: 70px;
+}
+
+.photo {
+    height: 100%;
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.photo img {
+    height: 80%;
+    width: 100%;
+    border-radius: 5%;
+    overflow: hidden;
+    box-shadow: 0 0 0.5rem 0.2rem rgba(0, 0, 0, 0.4);
+    animation: slideInLeft 1s ease-in-out 0s forwards;
+}
+
+/* .image-slider {
+    height: 60%;
+    width: 80%;
+    margin-left: 2.7rem;
+    background-color: #efeaea;
+    border-radius: 5%;
+    animation: slideInLeft 1s ease-in-out 1s forwards;
+} */
+
+/* .image-slider .image img {
+    height: 100%;
+    width: 100%;
+    border-radius: 5%;
+    overflow: hidden;
+    box-shadow: 0 0 8px 0.2rem rgba(0, 0, 0, 0.4);
+} */
+
+.text-slider {
+    height: 100%;
+    width: 60%;
+    /* background-color: #e06969; */
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    animation: fadeIn 1s ease-in-out 0s forwards;
+}
+
+ .text-slider h2 {
+    margin-bottom: 1rem;
+    font-size: 3rem;
+    color: #10cf49;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+}
+
+ .text-slider p {
+    font-size: 2rem;
+    color: #f5f1ed;
+    line-height: 1.3;
+    letter-spacing: 0.10rem;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
 }
 
 /* .middle-page {
@@ -245,7 +398,7 @@
     animation: fadeIn 1.5s ease-in-out 0.5s forwards;
 }
 
- .yt-video{
+.yt-video {
     width: 45%;
     height: 460px;
     background: rgb(122, 109, 109, 0.3);
@@ -364,7 +517,7 @@
     align-items: center;
 }
 
-.menu-text p{
+.menu-text p {
     transition: transform 0.3s ease-in-out;
 }
 
@@ -384,7 +537,7 @@
     transition: transform 0.3s ease-in-out;
 }
 
-.item:hover  {
+.item:hover {
     transform: scale(1.1);
     /* Text grows slightly */
 }
