--- a/gallery.css
+++ b/gallery.css
@@ -71,6 +71,30 @@ body{
 
 }
 
+* menu icon */
+.menu-icon{
+    display: none;
+}
+
+.menu-icon i{
+    color: #000000;
+    font-size: 30px;
+}
+
+/* close icon */
+.close-icon {
+    display: none;
+    align-self: flex-end;
+    top: 40px;
+    margin-bottom: 15px;
+    cursor: pointer;
+}
+
+.close-icon i {
+    font-size: 25px;
+    color: black;
+}
+
 /* text of main branch photoes */
 .photo-text{
     margin: 100px 0 20px;
