--- a/home.css
+++ b/home.css
@@ -33,10 +33,7 @@
     font-size: 20px;
     font-weight: 700;
     border: 4px solid #e7d1b2;
-    border-bottom-left-radius: 50px;
-    border-top-left-radius: 50px;
-    border-bottom-right-radius: 50px;
-    border-top-right-radius: 50px;
+    border-radius: 50px;
     margin-left: 300px;
     margin-top: 67px;
     display: flex;
@@ -87,6 +84,31 @@
 
 }
 
+/* menu icon */
+.menu-icon{
+    display: none;
+}
+
+.menu-icon i{
+    color: #000000;
+    font-size: 30px;
+}
+
+/* close icon */
+.close-icon {
+    display: none;
+    align-self: flex-end;
+    top: 40px;
+    margin-bottom: 15px;
+    cursor: pointer;
+}
+
+.close-icon i {
+    font-size: 25px;
+    color: black;
+}
+
+/* first background image */
 .vadapav-changing-img {
     width: 100%;
     height: 100vh;
@@ -97,6 +119,7 @@
     z-index: -1;
 }
 
+/* Slider */
 .slider {
     height: 55%;
     background-color: #ffffff67;
@@ -164,8 +187,8 @@
 
 .dot {
     cursor: pointer;
-    height: 1rem;
-    width: 1rem;
+    height: 0.7rem;
+    width: 0.7rem;
     border-radius: 50%;
     background: #ffffff;
     display: inline-block;
@@ -293,7 +316,7 @@
 .our-journey-img {
     height: 100%;
     width: 30%;
-    animation: slideInLeft 0.5s ease-in-out 1s forwards;
+    animation: slideInLeft 0.5s ease-in-out 0s forwards;
 }
 
 @keyframes slideInLeft {
