--- a/franchise.css
+++ b/franchise.css
@@ -13,10 +13,7 @@
     font-size: 20px;
     font-weight: 700;
     border: 4px solid #e7d1b2;
-    border-bottom-left-radius: 50px;
-    border-top-left-radius: 50px;
-    border-bottom-right-radius: 50px;
-    border-top-right-radius: 50px;
+    border-radius: 50px;
     margin-left: 300px;
     margin-top: 67px;
     display: flex;
@@ -57,15 +54,26 @@
     z-index: 2;
 }
 
-.border {
-    border: 2px solid transparent;
+.navbar a {
+    text-decoration: none;
+    color: black;
+    padding: 10px 15px;
+    border-radius: 25px;
+    transition: all 0.3s ease;
 }
 
-.border :hover {
-
-    font-size: 23px;
-
+/* Hover effect on navbar*/
+.navbar a:hover {
+    background: linear-gradient(to right, #fceabb, #d8bc6e);
+    color: white;
 }
+
+/* Active link (if current page) */
+.navbar a.active {
+    background: linear-gradient(to right, #fceabb, #d8bc6e);
+    color: white;
+}
+
 
 /* menu icon */
 .menu-icon{
@@ -109,7 +117,7 @@
 /* Enquiry */
 
 .franchise-content {
-    padding: 2rem 0 0 5rem;
+    padding: 5rem;
     gap: 10rem;
     margin: 6rem 0;
     display: flex;
